added game instance class object to save variables between levels,and
   added buttons on HUD

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=MDEV1003W22
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MyContent/Maps/MySecondlevel.MySecondlevel
+EditorStartupMap=/Game/MyContent/Maps/TopDownExampleMap.TopDownExampleMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -10,8 +10,8 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap.TopDownExampleMap
+GameInstanceClass=/Game/MyContent/MySuperGameInstance.MySuperGameInstance_C
+GameDefaultMap=/Game/MyContent/Maps/TopDownExampleMap.TopDownExampleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
 GlobalDefaultServerGameMode=None
